# baxter_dance

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  run.sh  run2.sh~  to-do.txt
Perception/: Notes  Notes~
Perception/my_pcl_tutorial/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Perception/my_pcl_tutorial/src/: example.cpp~
Perception/my_pcl_tutorial_v2/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Perception/my_pcl_tutorial_v2/launch/: README  TransformedVoxels.launch  TransformedVoxels.launch~  perception.launch
Perception/my_pcl_tutorial_v2/src/: example2.cpp  example2.cpp~  planar_segmentation.cpp  segmentation.cpp  transform.cpp  transform.cpp~  transform_ros.cpp  xyzavg_ros.cpp  xyzfinder_ros.cpp  xyzfinder_ros.cpp~
baxter_dance/: CMakeLists.txt
baxter_dance/cfg_dance/: JointSpringsExample.cfg
baxter_dance/launch/: baxter_move_group_interface_tutorial.launch  planning_scene_tutorial_nikhil.launch  planning_scene_tutorial_nikhil.launch~
baxter_dance/src/: Client_Node.py  baxter_move_group_interface_tutorial.cpp  baxter_planning_scene_tutorial.cpp  dance_collision_check.cpp  dance_collision_check.cpp~  manager.py  manager.py~  move_group_interface_tutorial_nikhil.cpp  perception.py~  planner.py  planner.py~  reactive_behavior.py  simple2.txt  trajectory_execution.py  trajectory_execution.py~
baxter_dance/srv/: ReactiveBehavior.srv
baxter_dance/trajectories/: b1  b1_v2  b3  b3_v2  b3_v3  b_short  c1  c1_v2  c3  c3_v2  c3_v3  c_short  l1  l3  l_short  r1  r3  r_short  video2
devel/: .catkin  .rosinstall  setup.sh
launch/: .planning_scene_tutorial_nikhil.launch.swp  planning_scene_tutorial_nikhil.launch
src/: Client_Node.py  dance_collision_check.cpp  joint_torque_springs_dance.py  manager.py  planner.py  reactive_behavior.py  reactive_behavior_src.py  simple2.txt  trajectory_execution.py
srv/: ReactiveBehavior.srv  ReactiveBehavior.srv~
trajectories/: simple  simple2  static_test  video
